--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@opentelemetry/exporter-jaeger": "^1.12.0",
     "@opentelemetry/instrumentation-http": "^0.38.0",
     "@opentelemetry/instrumentation-mongodb": "^0.34.1",
+    "@opentelemetry/resources": "^1.12.0",
+    "@opentelemetry/sdk-trace-base": "^1.12.0",
     "@opentelemetry/sdk-trace-node": "^1.12.0",
+    "@opentelemetry/semantic-conventions": "^1.12.0",
     "express": "^4.18.2",
     "mongodb": "^4.3.1",
     "opentelemetry-instrumentation-express": "^0.35.0"
